<resources>
    <string name="app_name">InventoryApp</string>
    <string name="activity_name_add_product">Add a New Product</string>
    <string name="action_settings">Settings</string>
    <string name="product_quantity_formatter">Quantity: %d</string>
    <string name="product_price_formatter">Price: $%.2f</string>
    <string name="delete_product_formatter">Are you sure you want to delete %s?</string>
    <string name="dialog_answer_yes">Yes</string>
    <string name="dialog_answer_no">No</string>
    <string name="email_order_formatter">Please send us more of %s</string>
    <string name="hint_product_name">Enter Product name</string>
    <string name="hint_product_quantity">Enter Product quantity</string>
    <string name="hint_product_price">Enter Product price</string>
    <string name="btn_sale">Sale</string>
    <string name="modify_quantity_increase">Increase</string>
    <string name="modify_quantity_decrease">Decrease</string>
    <string name="order_more_products">Order More</string>
    <string name="delete">Delete</string>
    <string name="pick_supplier">Pick a Supplier:</string>
    <string name="delete_dialog_title">Deleting a Product</string>
    <string name="product_add_btn">Add Product</string>
    <string name="choose_image">Please Enter the Url for the Product Image</string>
    <string name="err_msg_name_empty">Please enter a product name</string>
    <string name="err_msg_name_exists">There is already a product with that name</string>
    <string name="err_msg_quantity">Please enter a valid number</string>
    <string name="err_msg_price">Please enter a valid price</string>
    <string name="empty_list_add_product">No product found. Please add a new product</string>

</resources>
